[package]
name = "jaime"
version = "0.2.0"
authors = ["Juan Ibiapina <juanibiapina@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xdg = "*"
serde = { version = "*", features = ["derive"] }
serde_yaml = "*"
skim = "*"
rustyline = "*"
failure = "*"
